--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,10 +1,10 @@
 {
-  "CONTRACT_ADDRESS": "0x040f2177f29494fd8DF0ca78bdC02EcCF38DB773",
-  "SCAN_LINK": "https://mumbai.polygonscan.com/address/0x040f2177f29494fd8DF0ca78bdC02EcCF38DB773",
+  "CONTRACT_ADDRESS": "0x1EC38028bE4131Befe32C6C3Df68C8d5Cb976E78",
+  "SCAN_LINK": "https://etherscan.io/address/0x1EC38028bE4131Befe32C6C3Df68C8d5Cb976E78",
   "NETWORK": {
-    "NAME": "Polygon Mumbai",
-    "SYMBOL": "MATIC",
-    "ID": 80001
+    "NAME": "Ethereum",
+    "SYMBOL": "ETH",
+    "ID": 1
   },
   "NFT_NAME": "Sunshine Gold Mine Club",
   "SYMBOL": "SGMC",
@@ -12,7 +12,7 @@
   "WEI_COST": 150000000000000000,
   "DISPLAY_COST": 1,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
+  "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://testnets.opensea.io/collection/sunshine-gold-mine-club-v3",
   "SHOW_BACKGROUND": true
 }
